--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p{
     color: dimgray;
 }
 .dream-area{
-    background-image: url(images/dream-bg.png);
+    background-image: url("images/dream-bg.png");
     background-repeat: no-repeat;
     background-position: right;
 }
@@ -52,7 +52,7 @@ p{
     background-color: white;
 }
 .experience-area{
-    background-image: url(images/exp-bg.png);
+    background-image: url("images/exp-bg.png");
     background-repeat: no-repeat;
     background-position: left;
 }
